no-login API refactor.  modify other API resources after initial bookings resource modification
